--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,9 +1,10 @@
 jdk:
   - openjdk17
-  
-before_install:
-  - sdk install java 17.0.3-tem
-  - sdk use java 17.0.3-tem
-  
+
+# JitPack builds release variant by default
+# To build debug variant, uncomment the following:
+# buildCommand:
+#   - ./gradlew :library:assembleDebug :library:publishDebugPublicationToMavenLocal
+
 install:
-  - ./gradlew :library:publishToMavenLocal
+  - ./gradlew :library:assembleRelease :library:publishReleasePublicationToMavenLocal -Dorg.gradle.daemon=false
